# rust-user-service

./: Cargo.toml  Dockerfile  README.md
config/: default.yml  development.yml
kubernetes/: user-service.yaml
migrations/2020-09-23-183826_administrative_procedures/: down.sql  up.sql
migrations/2020-09-23-183905_add_users/: up.sql
migrations/2020-09-23-183905_create_users/: up.sql
migrations/2020-10-03-212556_create_sessions/: up.sql
src/: auth.rs  configuration.rs  db.rs  lib.rs  main.rs  schema.rs
src/api/: mod.rs  session.rs  user.rs  users.rs
src/error/: codes.rs  mod.rs  responses.rs
src/middleware/: jwt.rs
src/model/: mod.rs  sessions.rs  users.rs
src/repository/: mod.rs  session_repository.rs  user_repository.rs
src/service/: mod.rs  session_service.rs  user_service.rs
