[package]
name = "user_service"
version = "0.1.0"
authors = ["PeterUlb <peter@ulbrich.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.9"
actix-web = "3"
actix-service = "1"
futures = "0.3.5"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
chrono = { version = "0.4.15", features = ["serde"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.57"
log = "0.4.0"
env_logger = "0.7.1"
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.2"
rand = "0.7.3"
validator = { version = "0.11", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde"] }